# aoc2024

./: .gitleaksignore  .textlintrc  pyproject.toml
.devcontainer/: devcontainer.json
solutions/alessio/day01/: day01.go
solutions/alessio/day02/: day02.go
solutions/alessio/day03/: day03.go
solutions/alessio/day04/: day04.go
solutions/alessio/day05/: day05.go
solutions/alessio/day06/: aoc6  day06.go  go.mod
solutions/alessio/day07/: aoc7  day07.go
solutions/alessio/day08/: day08.go  go.mod
solutions/alessio/day09/: day09-with-intervals.go  day09.go  go.mod  out.txt
solutions/alessio/day10/: day10.go  go.mod
solutions/alessio/day11/: day11.go  go.mod
solutions/alessio/day12/: day12.go  go.mod
solutions/alessio/day13/: aoc13  day13.go  go.mod
solutions/alessio/day14/: aoc14  day14.go  go.mod
solutions/alessio/day15/: day15.go  go.mod
solutions/alessio/day16/: aoc16  day16.go  go.mod  out.txt
solutions/alessio/day17/: aoc17  day17.go  go.mod  notes.txt
solutions/alessio/day18/: day18.go  go.mod  out.txt
solutions/alessio/day19/: day19.go  go.mod
solutions/alessio/day20/: aoc20  day20.go  go.mod  out.txt
solutions/alessio/day21/: aoc21  day21.go  go.mod
solutions/alessio/day22/: aoc22  day22.go  go.mod
solutions/alessio/day23/: aoc23  day23.go  go.mod
solutions/alessio/day24/: aoc24  day24.go  go.mod  input24.txt  out.txt
solutions/alessio/day25/: aoc25  day25.go  go.mod
solutions/alv67/Day01/: index.md
solutions/alv67/Day02/: day02.ipynb  index.md
solutions/alv67/Day03/: day03.ipynb  index.md
(+40 files in other folders)
