[tool.poetry]
name = "aoc-2024"
version = "0.1.0"
description = "B-AROL-O Team solutions to Advent of Code 2024"
authors = ["B-AROL-O Team <baroloteam@solarma.it>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
